Adds more sections, adds links

--- a/docs/docs/concepts.mdx
+++ b/docs/docs/concepts.mdx
@@ -89,6 +89,8 @@ LCEL was intended to provide consistency around behavior and customization over 
 `ConversationalRetrievalChain`. If you are currently using one of these legacy chains, please see
 [this guide for guidance on how to migrate](/docs/how_to/migrate_chains/).
 
+For guides on how to do specific tasks with LCEL, check out [the relevant how-to guides](/docs/how_to/#langchain-expression-language-lcel).
+
 ### Runnable interface
 <span data-heading-keywords="invoke,runnable"></span>
 
