--- a/docs/docs/how_to/migrate_chains.ipynb
+++ b/docs/docs/how_to/migrate_chains.ipynb
@@ -247,8 +247,8 @@
    "source": [
     "from langchain.chains import ConversationChain\n",
     "from langchain.memory import ConversationBufferMemory\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "template = \"\"\"\n",
     "You are a pirate. Answer the following questions as best you can.\n",
@@ -301,25 +301,24 @@
    ],
    "source": [
     "from langchain_core.chat_history import InMemoryChatMessageHistory\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You are a pirate. Answer the following questions as best you can.\"),\n",
-    "  (\"placeholder\", \"{chat_history}\"),\n",
-    "  (\"human\", \"{input}\"),\n",
-    "])\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a pirate. Answer the following questions as best you can.\"),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "history = InMemoryChatMessageHistory()\n",
     "\n",
     "chain = prompt | ChatOpenAI() | StrOutputParser()\n",
     "\n",
-    "wrapped_chain = RunnableWithMessageHistory(\n",
-    "    chain,\n",
-    "    lambda x: history\n",
-    ")\n",
+    "wrapped_chain = RunnableWithMessageHistory(chain, lambda x: history)\n",
     "\n",
     "wrapped_chain.invoke(\n",
     "    {\"input\": \"how are you?\"},\n",
@@ -368,6 +367,7 @@
     "        store[session_id] = InMemoryChatMessageHistory()\n",
     "    return store[session_id]\n",
     "\n",
+    "\n",
     "chain = prompt | ChatOpenAI() | StrOutputParser()\n",
     "\n",
     "wrapped_chain = RunnableWithMessageHistory(chain, get_session_history)\n",
@@ -404,11 +404,11 @@
    "outputs": [],
    "source": [
     "# Load docs\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_community.vectorstores import FAISS\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
     "from langchain_openai.chat_models import ChatOpenAI\n",
+    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
     "\n",
     "loader = WebBaseLoader(\"https://lilianweng.github.io/posts/2023-06-23-agent/\")\n",
     "data = loader.load()\n",
@@ -462,9 +462,7 @@
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
     "qa_chain = RetrievalQA.from_llm(\n",
-    "    llm,\n",
-    "    retriever=vectorstore.as_retriever(),\n",
-    "    prompt=prompt\n",
+    "    llm, retriever=vectorstore.as_retriever(), prompt=prompt\n",
     ")\n",
     "\n",
     "qa_chain(\"What are autonomous agents?\")"
@@ -508,13 +506,15 @@
     "# See full prompt at https://smith.langchain.com/hub/rlm/rag-prompt\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "qa_chain = (\n",
     "    {\n",
     "        \"context\": vectorstore.as_retriever() | format_docs,\n",
-    "        \"question\": RunnablePassthrough()\n",
+    "        \"question\": RunnablePassthrough(),\n",
     "    }\n",
     "    | prompt\n",
     "    | llm\n",
@@ -558,20 +558,15 @@
     }
    ],
    "source": [
-    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
-    "from langchain.chains import create_retrieval_chain\n",
     "from langchain import hub\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "\n",
     "# See full prompt at https://smith.langchain.com/hub/langchain-ai/retrieval-qa-chat\n",
     "retrieval_qa_chat_prompt = hub.pull(\"langchain-ai/retrieval-qa-chat\")\n",
     "\n",
-    "combine_docs_chain = create_stuff_documents_chain(\n",
-    "    llm, retrieval_qa_chat_prompt\n",
-    ")\n",
-    "rag_chain = create_retrieval_chain(\n",
-    "  vectorstore.as_retriever(),\n",
-    "  combine_docs_chain\n",
-    ")\n",
+    "combine_docs_chain = create_stuff_documents_chain(llm, retrieval_qa_chat_prompt)\n",
+    "rag_chain = create_retrieval_chain(vectorstore.as_retriever(), combine_docs_chain)\n",
     "\n",
     "rag_chain.invoke({\"input\": \"What are autonomous agents?\"})"
    ]
@@ -638,9 +633,7 @@
     "Follow Up Input: {question}\n",
     "Standalone question:\"\"\"\n",
     "\n",
-    "condense_question_prompt = ChatPromptTemplate.from_template(\n",
-    "    condense_question_template\n",
-    ")\n",
+    "condense_question_prompt = ChatPromptTemplate.from_template(condense_question_template)\n",
     "\n",
     "qa_template = \"\"\"\n",
     "You are an assistant for question-answering tasks.\n",
@@ -658,23 +651,23 @@
     "Question: {question}\n",
     "\"\"\"\n",
     "\n",
-    "qa_prompt = ChatPromptTemplate.from_template(\n",
-    "    qa_template\n",
-    ")\n",
+    "qa_prompt = ChatPromptTemplate.from_template(qa_template)\n",
     "\n",
     "convo_qa_chain = ConversationalRetrievalChain.from_llm(\n",
     "    llm,\n",
     "    vectorstore.as_retriever(),\n",
     "    condense_question_prompt=condense_question_prompt,\n",
-    "    combine_docs_chain_kwargs={ \n",
-    "      \"prompt\": qa_prompt,\n",
-    "    }\n",
+    "    combine_docs_chain_kwargs={\n",
+    "        \"prompt\": qa_prompt,\n",
+    "    },\n",
     ")\n",
     "\n",
-    "convo_qa_chain({\n",
-    "    \"question\": \"What are autonomous agents?\",\n",
-    "    \"chat_history\": \"\",\n",
-    "})"
+    "convo_qa_chain(\n",
+    "    {\n",
+    "        \"question\": \"What are autonomous agents?\",\n",
+    "        \"chat_history\": \"\",\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -714,10 +707,7 @@
     }
    ],
    "source": [
-    "from langchain.chains import (\n",
-    "    create_history_aware_retriever,\n",
-    "    create_retrieval_chain\n",
-    ")\n",
+    "from langchain.chains import create_history_aware_retriever, create_retrieval_chain\n",
     "\n",
     "condense_question_system_template = (\n",
     "    \"Given a chat history and the latest user question \"\n",
@@ -757,15 +747,14 @@
     ")\n",
     "qa_chain = create_stuff_documents_chain(llm, qa_prompt)\n",
     "\n",
-    "convo_qa_chain = create_retrieval_chain(\n",
-    "    history_aware_retriever,\n",
-    "    qa_chain\n",
-    ")\n",
+    "convo_qa_chain = create_retrieval_chain(history_aware_retriever, qa_chain)\n",
     "\n",
-    "convo_qa_chain.invoke({\n",
-    "    \"input\": \"What are autonomous agents?\",\n",
-    "    \"chat_history\": [],\n",
-    "})"
+    "convo_qa_chain.invoke(\n",
+    "    {\n",
+    "        \"input\": \"What are autonomous agents?\",\n",
+    "        \"chat_history\": [],\n",
+    "    }\n",
+    ")"
    ]
   },
   {
