Fix linter issues in HANA Vector Engine self_query docs

--- a/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
+++ b/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "# Use OPENAI_API_KEY env variable\n",
     "# os.environ[\"OPENAI_API_KEY\"] = \"Your OpenAI API key\"\n",
     "from hdbcli import dbapi\n",
@@ -52,12 +53,12 @@
     "cur.execute(\"DROP TABLE LANGCHAIN_DEMO_SELF_QUERY\", ignoreErrors=True)\n",
     "cur.execute(\n",
     "    (\n",
-    "        '''CREATE TABLE \"LANGCHAIN_DEMO_SELF_QUERY\"  (\n",
+    "        \"\"\"CREATE TABLE \"LANGCHAIN_DEMO_SELF_QUERY\"  (\n",
     "        \"name\" NVARCHAR(100), \"is_active\" BOOLEAN, \"id\" INTEGER, \"height\" DOUBLE,\n",
     "        \"VEC_TEXT\" NCLOB, \n",
     "        \"VEC_META\" NCLOB, \n",
     "        \"VEC_VECTOR\" REAL_VECTOR\n",
-    "        )'''\n",
+    "        )\"\"\"\n",
     "    )\n",
     ")"
    ]
@@ -101,7 +102,7 @@
     "    connection=connection,\n",
     "    embedding=embeddings,\n",
     "    table_name=\"LANGCHAIN_DEMO_SELF_QUERY\",\n",
-    "    specific_metadata_columns=[\"name\", \"is_active\", \"id\", \"height\"]\n",
+    "    specific_metadata_columns=[\"name\", \"is_active\", \"id\", \"height\"],\n",
     ")\n",
     "\n",
     "# Delete already existing documents from the table\n",
@@ -163,7 +164,7 @@
     "    db,\n",
     "    document_content_description,\n",
     "    metadata_field_info,\n",
-    "    structured_query_translator=hana_translator\n",
+    "    structured_query_translator=hana_translator,\n",
     ")"
    ]
   },
@@ -185,7 +186,7 @@
     "docs = retriever.invoke(input=query_prompt)\n",
     "for doc in docs:\n",
     "    print(\"-\" * 80)\n",
-    "    print(doc.page_content, \" \", doc.metadata)\n"
+    "    print(doc.page_content, \" \", doc.metadata)"
    ]
   },
   {
@@ -215,7 +216,7 @@
     "\n",
     "sq = query_constructor.invoke(input=query_prompt)\n",
     "\n",
-    "print(\"Structured query: \",sq)\n",
+    "print(\"Structured query: \", sq)\n",
     "\n",
     "print(\"Translated for hana vector store: \", hana_translator.visit_structured_query(sq))"
    ]
