add snippet for pandas agent

--- a/docs/docs/how_to/agent_toolkits.ipynb
+++ b/docs/docs/how_to/agent_toolkits.ipynb
@@ -529,6 +529,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b4fe0ba-21c9-4074-aa5f-1731ab488a83",
+   "metadata": {},
+   "source": [
+    "## Example: Pandas agent\n",
+    "\n",
+    "\n",
+    "**⚠️ Security note ⚠️**\n",
+    "\n",
+    "This agent relies on access to a python repl tool which can execute\n",
+    "arbitrary code. This can be dangerous and requires a specially sandboxed\n",
+    "environment to be safely used. Failure to run this code in a properly\n",
+    "sandboxed environment can lead to arbitrary code execution vulnerabilities,\n",
+    "which can lead to data breaches, data loss, or other security incidents.\n",
+    "\n",
+    "Do not use this code with untrusted inputs, with elevated permissions,\n",
+    "or without consulting your security team about proper sandboxing!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a58e987e-c281-4fbe-9c42-cbc594624ffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(\n",
+    "    [\n",
+    "        {\"name\": \"The Da Vinci Code\", \"type\": \"book\", \"price\": 15, \"quantity\": 300, \"rating\": 4},\n",
+    "        {\"name\": \"Jurassic Park\", \"type\": \"book\", \"price\": 12, \"quantity\": 400, \"rating\": 4.5},\n",
+    "        {\"name\": \"Jurassic Park\", \"type\": \"film\", \"price\": 8, \"quantity\": 6, \"rating\": 5},\n",
+    "        {\"name\": \"Matilda\", \"type\": \"book\", \"price\": 5, \"quantity\": 80, \"rating\": 4},\n",
+    "        {\"name\": \"Clockwork Orange\", \"type\": None, \"price\": None, \"quantity\": 20, \"rating\": 4},\n",
+    "        {\"name\": \"Walden\", \"type\": None, \"price\": None, \"quantity\": 100, \"rating\": 4.5},\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "77941324-8efb-49f7-a53c-015c68fff477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import hub\n",
+    "from langchain_experimental.tools.python.tool import PythonAstREPLTool\n",
+    "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
+    "\n",
+    "# Prompt\n",
+    "prompt_template = hub.pull(\"langchain-ai/pandas-agent-system-prompt\")\n",
+    "system_message = prompt_template.format(df_head=df.head())\n",
+    "\n",
+    "# Tools\n",
+    "tools = [PythonAstREPLTool(locals={\"df\": df})]\n",
+    "\n",
+    "agent_executor = create_react_agent(llm, tools, messages_modifier=system_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d8fe753f-0d9a-4ed8-910b-8769ce39c32e",
    "metadata": {},
    "source": [
