propagate cost information to callback

--- a/docs/docs/how_to/chat_token_usage_tracking.ipynb
+++ b/docs/docs/how_to/chat_token_usage_tracking.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "#### OpenAI\n",
     "\n",
-    "For example, OpenAI will return a message [chunk](https://api.python.langchain.com/en/latest/messages/langchain_core.messages.ai.AIMessageChunk.html) at the end of a stream with token usage information. This behavior is supported by `langchain-openai >= 0.1.8` and can be enabled by setting `stream_options={\"include_usage\": True}`.\n",
+    "For example, OpenAI will return a message [chunk](https://api.python.langchain.com/en/latest/messages/langchain_core.messages.ai.AIMessageChunk.html) at the end of a stream with token usage information. This behavior is supported by `langchain-openai >= 0.1.8` and can be enabled by setting `stream_usage=True`. This attribute can also be set when `ChatOpenAI` is instantiated.\n",
     "\n",
     "```{=mdx}\n",
     ":::note\n",
@@ -172,18 +172,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content='Hello' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content='!' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' How' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' can' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' I' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' assist' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' you' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content=' today' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content='?' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content='' response_metadata={'finish_reason': 'stop'} id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf'\n",
-      "content='' id='run-b40e502e-d30e-4617-94ad-95b4dfee14bf' usage_metadata={'input_tokens': 8, 'output_tokens': 9, 'total_tokens': 17}\n"
+      "content='' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content='Hello' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content='!' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' How' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' can' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' I' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' assist' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' you' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content=' today' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content='?' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
+      "content='' id='run-08f70f32-7865-48d0-82c3-6213294387b1' usage_metadata={'input_tokens': 8, 'output_tokens': 9, 'total_tokens': 17}\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "aggregate = None\n",
-    "for chunk in llm.stream(\"hello\", stream_options={\"include_usage\": True}):\n",
+    "for chunk in llm.stream(\"hello\", stream_usage=True):\n",
     "    print(chunk)\n",
     "    aggregate = chunk if aggregate is None else aggregate + chunk"
    ]
@@ -229,7 +229,7 @@
    "id": "7dba63e8-0ed7-4533-8f0f-78e19c38a25c",
    "metadata": {},
    "source": [
-    "To disable streaming token counts for OpenAI, set `\"include_usage\"` to False in `stream_options`, or omit it from the parameters:"
+    "To disable streaming token counts for OpenAI, set `stream_usage` to False, or omit it from the parameters:"
    ]
   },
   {
@@ -242,17 +242,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content='Hello' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content='!' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' How' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' can' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' I' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' assist' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' you' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content=' today' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content='?' id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n",
-      "content='' response_metadata={'finish_reason': 'stop'} id='run-0085d64c-13d2-431b-a0fa-399be8cd3c52'\n"
+      "content='' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content='Hello' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content='!' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' How' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' can' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' I' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' assist' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' you' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content=' today' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content='?' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
+      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n"
      ]
     }
    ],
@@ -275,16 +275,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "57dec1fb-bd9c-4c98-8798-8fbbe67f6b2c",
+   "id": "0b1523d8-127e-4314-82fa-bd97aca37f9a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token usage: {'input_tokens': 79, 'output_tokens': 23, 'total_tokens': 102}\n",
+      "Token usage: {'input_tokens': 79, 'output_tokens': 26, 'total_tokens': 105}\n",
       "\n",
-      "setup='Why was the math book sad?' punchline='Because it had too many problems.'\n"
+      "setup='Why did the scarecrow win an award?' punchline='Because he was outstanding in his field!'\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "\n",
     "llm = ChatOpenAI(\n",
     "    model=\"gpt-3.5-turbo-0125\",\n",
-    "    model_kwargs={\"stream_options\": {\"include_usage\": True}},\n",
+    "    stream_usage=True,\n",
     ")\n",
     "# Under the hood, .with_structured_output binds tools to the\n",
     "# chat model and appends a parser.\n",
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31667d54",
+   "id": "b04a4486-72fd-48ce-8f9e-5d281b441195",
    "metadata": {},
    "outputs": [
     {
@@ -379,14 +379,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e09420f4",
+   "id": "05f22a1d-b021-490f-8840-f628a07459f2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55\n"
+      "54\n"
      ]
     }
    ],
@@ -398,28 +398,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9ac51188-c8f4-4230-90fd-3cd78cdd955d",
-   "metadata": {},
-   "source": [
-    "```{=mdx}\n",
-    ":::note\n",
-    "Cost information is currently not available in streaming mode. This is because model names are currently not propagated through chunks in streaming mode, and the model name is used to look up the correct pricing. Token counts however are available:\n",
-    ":::\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b241069a-265d-4497-af34-b0a5f95ae67f",
+   "id": "c00c9158-7bb4-4279-88e6-ea70f46e6ac2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28\n"
+      "Tokens Used: 27\n",
+      "\tPrompt Tokens: 11\n",
+      "\tCompletion Tokens: 16\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $2.95e-05\n"
      ]
     }
    ],
@@ -427,7 +419,7 @@
     "with get_openai_callback() as cb:\n",
     "    for chunk in llm.stream(\"Tell me a joke\", stream_options={\"include_usage\": True}):\n",
     "        pass\n",
-    "    print(cb.total_tokens)"
+    "    print(cb)"
    ]
   },
   {
@@ -440,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "5d1125c6",
    "metadata": {},
    "outputs": [],
