--- a/docs/docs/concepts.mdx
+++ b/docs/docs/concepts.mdx
@@ -60,7 +60,7 @@ Head to the [LangSmith docs here](https://docs.smith.langchain.com/).
   title="LangChain Framework Overview"
 />
 
-- **[LangGraph Cloud](https://langchain-ai.github.io/langgraph/cloud/):
+- **[LangGraph Cloud](https://langchain-ai.github.io/langgraph/cloud/)**:
 
 Turn your LangGraph applications into production-ready Assistant APIs.
 
