--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -40,7 +40,7 @@ And the following commercial products:
 
 :::note
 
-These docs focus on the Python LangChain libraries (`langchain-core`, `langchain`, `langchain-community`, etc.). [Head here](https://js.langchain.com) for docs on the JavaScript LangChain libraries and [here]((https://langchain-ai.github.io/langgraph) for docs on LangGraph.
+These docs focus on the Python LangChain libraries (`langchain-core`, `langchain`, `langchain-community`, etc.). [Head here](https://js.langchain.com) for docs on the JavaScript LangChain libraries and [here](https://langchain-ai.github.io/langgraph) for docs on LangGraph.
 
 :::
 
