--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -36,7 +36,7 @@ Concretely, the framework consists of the following open-source libraries:
 
 And the following commercial products:
 - **[LangSmith](https://docs.smith.langchain.com)**: A developer platform that lets you debug, evaluate, monitor, and optimize LLM applications, whether or not they're built with LangChain libraries.
-- **[LangGraph Cloud](https://langchain-ai.github.io/langgraph/cloud/): Turn your LangGraph applications into production-ready Assistant APIs.
+- **[LangGraph Cloud](https://langchain-ai.github.io/langgraph/cloud/)**: Turn your LangGraph applications into production-ready Assistant APIs.
 
 :::note
 
