docs: Qdrant new vector store

--- a/docs/docs/integrations/platforms/index.mdx
+++ b/docs/docs/integrations/platforms/index.mdx
@@ -38,6 +38,7 @@ These providers have standalone `langchain-{provider}` packages for improved ver
 - [OpenAI](/docs/integrations/platforms/openai)
 - [Pinecone](/docs/integrations/providers/pinecone)
 - [Qdrant](/docs/integrations/providers/qdrant)
+- [Qdrant - NEW](/docs/integrations/providers/qdrant-new)
 - [Robocorp](/docs/integrations/providers/robocorp)
 - [Together AI](/docs/integrations/providers/together)
 - [Upstage](/docs/integrations/providers/upstage)
