docs: Update heading

--- a/docs/docs/integrations/vectorstores/qdrant-new.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant-new.ipynb
@@ -6,11 +6,11 @@
    "id": "683953b3",
    "metadata": {},
    "source": [
-    "# Qdrant - Dense/Sparse/Hybrid\n",
+    "# Qdrant - New\n",
     "\n",
     ">[Qdrant](https://qdrant.tech/documentation/) (read: quadrant ) is a vector similarity search engine. It provides a production-ready service with a convenient API to store, search, and manage points - vectors with an additional payload. Qdrant provides extensive filtering support that makes it useful for all sorts of neural network or semantic-based matching, faceted search, and other applications.\n",
     "\n",
-    "This documentation demonstrates how to use Qdrant with Langchain for retrieval.\n",
+    "This documentation demonstrates how to use Qdrant with Langchain for dense/sparse and hybrid retrieval.\n",
     "\n",
     "> This page documents the `QdrantVectorStore` class that support dense, sparse and hybrid retrievals via Qdrant's new [Query API](https://qdrant.tech/blog/qdrant-1.10.x/). It requires you to run Qdrant v1.10.0 or above. For the older implementation, refer to the `Qdrant` class [docs](https://python.langchain.com/v0.2/docs/integrations/vectorstores/qdrant/).\n",
     "\n",
