deprecate API Loaders and update docs to use SDK Loaders

--- a/libs/partners/unstructured/docs/document_loaders.ipynb
+++ b/libs/partners/unstructured/docs/document_loaders.ipynb
@@ -13,11 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UnstructuredLoader\n",
+    "# Unstructured SDK Loaders\n",
     "\n",
     "- TODO: Make sure API reference link is correct.\n",
     "\n",
-    "This notebook provides a quick overview for getting started with Unstructured [document loader](/docs/integrations/document_loaders/). For detailed documentation of all UnstructuredLoader features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.langchain_unstructured_loader.UnstructuredLoader.html).\n",
+    "This notebook provides a quick overview for getting started with the\n",
+    "[UnstructuredSDKFileLoader](/docs/integrations/document_loaders/) and [UnstructuredSDKFileIOLoader](/docs/integrations/document_loaders/). For detailed documentation of\n",
+    "all UnstructuredLoader features and configurations head to the [API\n",
+    "reference](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.langchain_unstructured_loader.UnstructuredLoader.html).\n",
     "\n",
     "- TODO: Add any other relevant links, like information about underlying API, etc.\n",
     "\n",
