--- a/docs/docs/how_to/chat_token_usage_tracking.ipynb
+++ b/docs/docs/how_to/chat_token_usage_tracking.ipynb
@@ -172,18 +172,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content='Hello' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content='!' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' How' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' can' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' I' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' assist' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' you' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content=' today' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content='?' id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-08f70f32-7865-48d0-82c3-6213294387b1'\n",
-      "content='' id='run-08f70f32-7865-48d0-82c3-6213294387b1' usage_metadata={'input_tokens': 8, 'output_tokens': 9, 'total_tokens': 17}\n"
+      "content='' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content='Hello' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content='!' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' How' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' can' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' I' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' assist' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' you' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content=' today' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content='?' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623'\n",
+      "content='' id='run-adb20c31-60c7-43a2-99b2-d4a53ca5f623' usage_metadata={'input_tokens': 8, 'output_tokens': 9, 'total_tokens': 17}\n"
      ]
     }
    ],
@@ -242,17 +242,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content='Hello' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content='!' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' How' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' can' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' I' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' assist' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' you' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content=' today' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content='?' id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n",
-      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-abcedff1-e6ac-470e-834c-9f98cf0268ec'\n"
+      "content='' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content='Hello' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content='!' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' How' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' can' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' I' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' assist' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' you' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content=' today' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content='?' id='run-8e758550-94b0-4cca-a298-57482793c25d'\n",
+      "content='' response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-3.5-turbo-0125'} id='run-8e758550-94b0-4cca-a298-57482793c25d'\n"
      ]
     }
    ],
@@ -282,9 +282,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token usage: {'input_tokens': 79, 'output_tokens': 26, 'total_tokens': 105}\n",
+      "Token usage: {'input_tokens': 79, 'output_tokens': 23, 'total_tokens': 102}\n",
       "\n",
-      "setup='Why did the scarecrow win an award?' punchline='Because he was outstanding in his field!'\n"
+      "setup='Why was the math book sad?' punchline='Because it had too many problems.'\n"
      ]
     }
    ],
@@ -361,7 +361,11 @@
     "\n",
     "from langchain_community.callbacks.manager import get_openai_callback\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo-0125\",\n",
+    "    temperature=0,\n",
+    "    stream_usage=True,\n",
+    ")\n",
     "\n",
     "with get_openai_callback() as cb:\n",
     "    result = llm.invoke(\"Tell me a joke\")\n",
@@ -417,7 +421,7 @@
    ],
    "source": [
     "with get_openai_callback() as cb:\n",
-    "    for chunk in llm.stream(\"Tell me a joke\", stream_options={\"include_usage\": True}):\n",
+    "    for chunk in llm.stream(\"Tell me a joke\"):\n",
     "        pass\n",
     "    print(cb)"
    ]
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "5d1125c6",
    "metadata": {},
    "outputs": [],
@@ -450,20 +454,8 @@
     "tools = load_tools([\"wikipedia\"])\n",
     "agent = create_tool_calling_agent(llm, tools, prompt)\n",
     "agent_executor = AgentExecutor(\n",
-    "    agent=agent, tools=tools, verbose=True, stream_runnable=False\n",
+    "    agent=agent, tools=tools, verbose=True\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c1ae74d-8300-4041-9ff4-66093ee592b1",
-   "metadata": {},
-   "source": [
-    "```{=mdx}\n",
-    ":::note\n",
-    "We have to set `stream_runnable=False` for cost information, as described above. By default the AgentExecutor will stream the underlying agent so that you can get the most granular results when streaming events via AgentExecutor.stream_events.\n",
-    ":::\n",
-    "```"
    ]
   },
   {
@@ -495,22 +487,16 @@
       "\n",
       "\n",
       "\n",
-      "Page: Anna's hummingbird\n",
-      "Summary: Anna's hummingbird (Calypte anna) is a North American species of hummingbird. It was named after Anna Masséna, Duchess of Rivoli.\n",
-      "It is native to western coastal regions of North America. In the early 20th century, Anna's hummingbirds bred only in northern Baja California and Southern California. The transplanting of exotic ornamental plants in residential areas throughout the Pacific coast and inland deserts provided expanded nectar and nesting sites, allowing the species to expand its breeding range. Year-round residence of Anna's hummingbirds in the Pacific Northwest is an example of ecological release dependent on acclimation to colder winter temperatures, introduced plants, and human provision of nectar feeders during winter.\n",
-      "These birds feed on nectar from flowers using a long extendable tongue. They also consume small insects and other arthropods caught in flight or gleaned from vegetation.\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Page: Allen's hummingbird\n",
+      "Summary: Allen's hummingbird (Selasphorus sasin) is a species of hummingbird that breeds in the western United States. It is one of seven species in the genus Selasphorus.\u001b[0m\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `wikipedia` with `{'query': 'fastest bird species'}`\n",
       "\n",
       "\n",
       "\u001b[0m\u001b[36;1m\u001b[1;3mPage: List of birds by flight speed\n",
       "Summary: This is a list of the fastest flying birds in the world. A bird's velocity is necessarily variable; a hunting bird will reach much greater speeds while diving to catch prey than when flying horizontally. The bird that can achieve the greatest airspeed is the peregrine falcon (Falco peregrinus), able to exceed 320 km/h (200 mph) in its dives. A close relative of the common swift, the white-throated needletail (Hirundapus caudacutus), is commonly reported as the fastest bird in level flight with a reported top speed of 169 km/h (105 mph). This record remains unconfirmed as the measurement methods have never been published or verified. The record for the fastest confirmed level flight by a bird is 111.5 km/h (69.3 mph) held by the common swift.\n",
       "\n",
-      "\n",
-      "\n",
       "Page: Fastest animals\n",
       "Summary: This is a list of the fastest animals in the world, by types of animal.\n",
-      "\n",
-      "\n",
       "\n",
       "Page: Falcon\n",
       "Summary: Falcons () are birds of prey in the genus Falco, which includes about 40 species. Falcons are widely distributed on all continents of the world except Antarctica, though closely related raptors did occur there in the Eocene.\n",
@@ -518,13 +504,13 @@
       "The falcons are the largest genus in the Falconinae subfamily of Falconidae, which itself also includes another subfamily comprising caracaras and a few other species. All these birds kill with their beaks, using a tomial \"tooth\" on the side of their beaks—unlike the hawks, eagles, and other birds of prey in the Accipitridae, which use their feet.\n",
       "The largest falcon is the gyrfalcon at up to 65 cm in length.  The smallest falcon species is the pygmy falcon, which measures just 20 cm.  As with hawks and owls, falcons exhibit sexual dimorphism, with the females typically larger than the males, thus allowing a wider range of prey species.\n",
       "Some small falcons with long, narrow wings are called \"hobbies\" and some which hover while hunting are called \"kestrels\".\n",
-      "As is the case with many birds of prey, falcons have exceptional powers of vision; the visual acuity of one species has been measured at 2.6 times that of a normal human. Peregrine falcons have been recorded diving at speeds of 320 km/h (200 mph), making them the fastest-moving creatures on Earth; the fastest recorded dive attained a vertical speed of 390 km/h (240 mph).\u001b[0m\u001b[32;1m\u001b[1;3mThe scientific name for a hummingbird is Trochilidae. The fastest bird species is the peregrine falcon (Falco peregrinus), which can exceed speeds of 320 km/h (200 mph) in its dives.\u001b[0m\n",
+      "As is the case with many birds of prey, falcons have exceptional powers of vision; the visual acuity of one species has been measured at 2.6 times that of a normal human. Peregrine falcons have been recorded diving at speeds of 320 km/h (200 mph), making them the fastest-moving creatures on Earth; the fastest recorded dive attained a vertical speed of 390 km/h (240 mph).\u001b[0m\u001b[32;1m\u001b[1;3mThe scientific name for a hummingbird is Trochilidae. The fastest bird species in level flight is the common swift, which holds the record for the fastest confirmed level flight by a bird at 111.5 km/h (69.3 mph). The peregrine falcon is known to exceed speeds of 320 km/h (200 mph) in its dives, making it the fastest bird in terms of diving speed.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Total Tokens: 1787\n",
-      "Prompt Tokens: 1687\n",
-      "Completion Tokens: 100\n",
-      "Total Cost (USD): $0.0009935\n"
+      "Total Tokens: 1675\n",
+      "Prompt Tokens: 1538\n",
+      "Completion Tokens: 137\n",
+      "Total Cost (USD): $0.0009745000000000001\n"
      ]
     }
    ],
