--- a/docs/docs/how_to/few_shot_examples.ipynb
+++ b/docs/docs/how_to/few_shot_examples.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "80c5ac5c",
    "metadata": {},
    "outputs": [
@@ -295,6 +295,7 @@
     "    Chroma,\n",
     "    # This is the number of examples to produce.\n",
     "    k=1,\n",
+    "    input_keys=[\"question\"]\n",
     ")\n",
     "\n",
     "# Select the most similar example to the input.\n",
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "de69a214",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,7 @@
       "So the final answer is: Joseph Ball\n",
       "\n",
       "\n",
-      "Question: Who was the father of Mary Ball Washington?\n"
+      "Person question is about: Mary Ball Washington\n"
      ]
     }
    ],
@@ -343,12 +344,12 @@
     "prompt = FewShotPromptTemplate(\n",
     "    example_selector=example_selector,\n",
     "    example_prompt=example_prompt,\n",
-    "    suffix=\"Question: {input}\",\n",
-    "    input_variables=[\"input\"],\n",
+    "    suffix=\"Person question is about: {input}\",\n",
+    "    input_variables=[\"input\",\"question\"],\n",
     ")\n",
     "\n",
     "print(\n",
-    "    prompt.invoke({\"input\": \"Who was the father of Mary Ball Washington?\"}).to_string()\n",
+    "    prompt.invoke({\"question\": \"Who was the father of Mary Ball Washington?\",\"input\":\"Mary Ball Washington\"}).to_string()\n",
     ")"
    ]
   },
