--- a/docs/docs/how_to/few_shot_examples.ipynb
+++ b/docs/docs/how_to/few_shot_examples.ipynb
@@ -295,7 +295,7 @@
     "    Chroma,\n",
     "    # This is the number of examples to produce.\n",
     "    k=1,\n",
-    "    input_keys=[\"question\"]\n",
+    "    input_keys=[\"question\"],\n",
     ")\n",
     "\n",
     "# Select the most similar example to the input.\n",
@@ -345,11 +345,16 @@
     "    example_selector=example_selector,\n",
     "    example_prompt=example_prompt,\n",
     "    suffix=\"Person question is about: {input}\",\n",
-    "    input_variables=[\"input\",\"question\"],\n",
+    "    input_variables=[\"input\", \"question\"],\n",
     ")\n",
     "\n",
     "print(\n",
-    "    prompt.invoke({\"question\": \"Who was the father of Mary Ball Washington?\",\"input\":\"Mary Ball Washington\"}).to_string()\n",
+    "    prompt.invoke(\n",
+    "        {\n",
+    "            \"question\": \"Who was the father of Mary Ball Washington?\",\n",
+    "            \"input\": \"Mary Ball Washington\",\n",
+    "        }\n",
+    "    ).to_string()\n",
     ")"
    ]
   },
