--- a/cookbook/stepback-qa.ipynb
+++ b/cookbook/stepback-qa.ipynb
@@ -57,6 +57,7 @@
     "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
     "    example_prompt=example_prompt,\n",
     "    examples=examples,\n",
+    "    input_variables=[]\n",
     ")"
    ]
   },
