--- a/docs/docs/how_to/few_shot_examples_chat.ipynb
+++ b/docs/docs/how_to/few_shot_examples_chat.ipynb
@@ -162,6 +162,7 @@
     "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
     "    example_prompt=example_prompt,\n",
     "    examples=examples,\n",
+    "    input_variables=[],\n",
     ")\n",
     "\n",
     "print(few_shot_prompt.invoke({}).to_messages())"
@@ -354,6 +355,7 @@
     "    example_prompt=ChatPromptTemplate.from_messages(\n",
     "        [(\"human\", \"{input}\"), (\"ai\", \"{output}\")]\n",
     "    ),\n",
+    "    input_variables=[],\n",
     ")\n",
     "\n",
     "print(few_shot_prompt.invoke(input=\"What's 3 🦜 3?\").to_messages())"
