--- a/cookbook/stepback-qa.ipynb
+++ b/cookbook/stepback-qa.ipynb
@@ -55,9 +55,7 @@
     "    ]\n",
     ")\n",
     "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
-    "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
-    "    input_variables=[]\n",
+    "    example_prompt=example_prompt, examples=examples, input_variables=[]\n",
     ")"
    ]
   },
