clean up inference of schema

--- a/docs/docs/how_to/convert_runnable_to_tool.ipynb
+++ b/docs/docs/how_to/convert_runnable_to_tool.ipynb
@@ -311,7 +311,6 @@
     "vectorstore = InMemoryVectorStore.from_documents(\n",
     "    documents, embedding=OpenAIEmbeddings()\n",
     ")\n",
-    "llm = ChatOpenAI()\n",
     "\n",
     "retriever = vectorstore.as_retriever(\n",
     "    search_type=\"similarity\",\n",
@@ -355,11 +354,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_gaeXThp8UiHmTbPbsMaLRSkK', 'function': {'arguments': '{\"__arg1\":\"dogs\"}', 'name': 'pet_info_retriever'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 19, 'prompt_tokens': 60, 'total_tokens': 79}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-40342ef3-3052-4a68-b8f6-da6121c801bc-0', tool_calls=[{'name': 'pet_info_retriever', 'args': {'__arg1': 'dogs'}, 'id': 'call_gaeXThp8UiHmTbPbsMaLRSkK'}], usage_metadata={'input_tokens': 60, 'output_tokens': 19, 'total_tokens': 79})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_W8cnfOjwqEn4cFcg19LN9mYD', 'function': {'arguments': '{\"__arg1\":\"dogs\"}', 'name': 'pet_info_retriever'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 19, 'prompt_tokens': 60, 'total_tokens': 79}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-d7f81de9-1fb7-4caf-81ed-16dcdb0b2ab4-0', tool_calls=[{'name': 'pet_info_retriever', 'args': {'__arg1': 'dogs'}, 'id': 'call_W8cnfOjwqEn4cFcg19LN9mYD'}], usage_metadata={'input_tokens': 60, 'output_tokens': 19, 'total_tokens': 79})]}}\n",
       "----\n",
-      "{'tools': {'messages': [ToolMessage(content=\"[Document(id='ea3aa186-c021-4054-a0ed-c05d304020a7', page_content='Dogs are great companions, known for their loyalty and friendliness.')]\", name='pet_info_retriever', tool_call_id='call_gaeXThp8UiHmTbPbsMaLRSkK')]}}\n",
+      "{'tools': {'messages': [ToolMessage(content=\"[Document(id='86f835fe-4bbe-4ec6-aeb4-489a8b541707', page_content='Dogs are great companions, known for their loyalty and friendliness.')]\", name='pet_info_retriever', tool_call_id='call_W8cnfOjwqEn4cFcg19LN9mYD')]}}\n",
       "----\n",
-      "{'agent': {'messages': [AIMessage(content='Dogs are known for being great companions, known for their loyalty and friendliness.', response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 132, 'total_tokens': 150}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-ad51b628-bf49-46f3-b8ca-95d003fa85d9-0', usage_metadata={'input_tokens': 132, 'output_tokens': 18, 'total_tokens': 150})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='Dogs are known for being great companions, known for their loyalty and friendliness.', response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 134, 'total_tokens': 152}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-9ca5847a-a5eb-44c0-a774-84cc2c5bbc5b-0', usage_metadata={'input_tokens': 134, 'output_tokens': 18, 'total_tokens': 152})]}}\n",
       "----\n"
      ]
     }
@@ -432,7 +431,31 @@
    "id": "955a23db-5218-4c34-8486-450a2ddb3443",
    "metadata": {},
    "source": [
-    "When we create the corresponding tool, we specify the specific arguments expected by the chain via `arg_types`, conveying to the agent what parameters should be populated:"
+    "Note that the input schema for our chain contains the required arguments, so it converts to a tool without further specification:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c9f6e61-80ed-4abb-8e77-84de3ccbc891",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'RunnableParallel<context,question,answer_style>Input',\n",
+       " 'type': 'object',\n",
+       " 'properties': {'question': {'title': 'Question'},\n",
+       "  'answer_style': {'title': 'Answer Style'}}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain.input_schema.schema()"
    ]
   },
   {
@@ -442,14 +465,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tools = [\n",
-    "    rag_chain.as_tool(\n",
-    "        name=\"pet_expert\",\n",
-    "        description=\"Get information about pets.\",\n",
-    "        arg_types={\"question\": str, \"answer_style\": str},\n",
-    "    )\n",
-    "]\n",
-    "agent = create_react_agent(llm, tools)"
+    "rag_tool = rag_chain.as_tool(\n",
+    "    name=\"pet_expert\",\n",
+    "    description=\"Get information about pets.\",\n",
+    "    arg_types={\"question\": str, \"answer_style\": str},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4570615b-8f96-4d97-ae01-1c08b14be584",
+   "metadata": {},
+   "source": [
+    "Below we again invoke the agent. Note that the agent populates the required parameters in its `tool_calls`:"
    ]
   },
   {
@@ -462,16 +490,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_56xmDTXyCBxbP8rGGhdlyo8I', 'function': {'arguments': '{\"question\":\"What are dogs known for?\",\"answer_style\":\"pirate\"}', 'name': 'pet_expert'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 26, 'prompt_tokens': 59, 'total_tokens': 85}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-3b7433f7-d7a5-473e-aaf1-bd74a11edeab-0', tool_calls=[{'name': 'pet_expert', 'args': {'question': 'What are dogs known for?', 'answer_style': 'pirate'}, 'id': 'call_56xmDTXyCBxbP8rGGhdlyo8I'}], usage_metadata={'input_tokens': 59, 'output_tokens': 26, 'total_tokens': 85})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_KIYDc5okwqtDvFGTEAcKvL0l', 'function': {'arguments': '{\"question\":\"What are dogs known for?\",\"answer_style\":\"pirate\"}', 'name': 'pet_expert'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 26, 'prompt_tokens': 59, 'total_tokens': 85}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-63690d8c-1711-45ae-936b-11f9b2face24-0', tool_calls=[{'name': 'pet_expert', 'args': {'question': 'What are dogs known for?', 'answer_style': 'pirate'}, 'id': 'call_KIYDc5okwqtDvFGTEAcKvL0l'}], usage_metadata={'input_tokens': 59, 'output_tokens': 26, 'total_tokens': 85})]}}\n",
       "----\n",
-      "{'tools': {'messages': [ToolMessage(content=\"Arr, dogs be known fer bein' loyal mates who be standin' by yer side through thick and thin. They be friendly creatures, always ready to wag their tails and greet ye with joy. Dogs be great companions on land and sea, aye!\", name='pet_expert', tool_call_id='call_56xmDTXyCBxbP8rGGhdlyo8I')]}}\n",
+      "{'tools': {'messages': [ToolMessage(content=\"Arr, dogs be known fer bein' loyal hearties, standin' by yer side through thick and thin. They be friendly creatures, always ready fer a good belly scratch or a game o' fetch. Dogs be great companions on land or sea, me matey!\", name='pet_expert', tool_call_id='call_KIYDc5okwqtDvFGTEAcKvL0l')]}}\n",
       "----\n",
-      "{'agent': {'messages': [AIMessage(content='A pirate would say that dogs are known for being loyal mates who stand by your side through thick and thin. They are friendly creatures, always ready to wag their tails and greet you with joy. Dogs are great companions on land and sea, aye!', response_metadata={'token_usage': {'completion_tokens': 52, 'prompt_tokens': 147, 'total_tokens': 199}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-10154788-185d-4436-b727-df32228bf06c-0', usage_metadata={'input_tokens': 147, 'output_tokens': 52, 'total_tokens': 199})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='A pirate would say that dogs are known for being loyal hearties, friendly creatures, great companions on land or sea, always ready for a good belly scratch or a game of fetch.', response_metadata={'token_usage': {'completion_tokens': 38, 'prompt_tokens': 150, 'total_tokens': 188}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-324dc627-517f-4cf0-8345-3ef7349151ac-0', usage_metadata={'input_tokens': 150, 'output_tokens': 38, 'total_tokens': 188})]}}\n",
       "----\n"
      ]
     }
    ],
    "source": [
+    "agent = create_react_agent(llm, [rag_tool])\n",
+    "\n",
     "for chunk in agent.stream(\n",
     "    {\"messages\": [(\"human\", \"What would a pirate say dogs are known for?\")]}\n",
     "):\n",
