--- a/docs/docs/how_to/convert_runnable_to_tool.ipynb
+++ b/docs/docs/how_to/convert_runnable_to_tool.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a3f9cf5b-8c71-4b0f-902b-f92e028780c9",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,6 @@
     "rag_tool = rag_chain.as_tool(\n",
     "    name=\"pet_expert\",\n",
     "    description=\"Get information about pets.\",\n",
-    "    arg_types={\"question\": str, \"answer_style\": str},\n",
     ")"
    ]
   },
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "06409913-a2ad-400f-a202-7b8dd2ef483a",
    "metadata": {},
    "outputs": [
@@ -490,11 +489,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_KIYDc5okwqtDvFGTEAcKvL0l', 'function': {'arguments': '{\"question\":\"What are dogs known for?\",\"answer_style\":\"pirate\"}', 'name': 'pet_expert'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 26, 'prompt_tokens': 59, 'total_tokens': 85}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-63690d8c-1711-45ae-936b-11f9b2face24-0', tool_calls=[{'name': 'pet_expert', 'args': {'question': 'What are dogs known for?', 'answer_style': 'pirate'}, 'id': 'call_KIYDc5okwqtDvFGTEAcKvL0l'}], usage_metadata={'input_tokens': 59, 'output_tokens': 26, 'total_tokens': 85})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_17iLPWvOD23zqwd1QVQ00Y63', 'function': {'arguments': '{\"question\":\"What are dogs known for according to pirates?\",\"answer_style\":\"quote\"}', 'name': 'pet_expert'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 28, 'prompt_tokens': 59, 'total_tokens': 87}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-7fef44f3-7bba-4e63-8c51-2ad9c5e65e2e-0', tool_calls=[{'name': 'pet_expert', 'args': {'question': 'What are dogs known for according to pirates?', 'answer_style': 'quote'}, 'id': 'call_17iLPWvOD23zqwd1QVQ00Y63'}], usage_metadata={'input_tokens': 59, 'output_tokens': 28, 'total_tokens': 87})]}}\n",
       "----\n",
-      "{'tools': {'messages': [ToolMessage(content=\"Arr, dogs be known fer bein' loyal hearties, standin' by yer side through thick and thin. They be friendly creatures, always ready fer a good belly scratch or a game o' fetch. Dogs be great companions on land or sea, me matey!\", name='pet_expert', tool_call_id='call_KIYDc5okwqtDvFGTEAcKvL0l')]}}\n",
+      "{'tools': {'messages': [ToolMessage(content='\"Dogs are known for their loyalty and friendliness, making them great companions for pirates on long sea voyages.\"', name='pet_expert', tool_call_id='call_17iLPWvOD23zqwd1QVQ00Y63')]}}\n",
       "----\n",
-      "{'agent': {'messages': [AIMessage(content='A pirate would say that dogs are known for being loyal hearties, friendly creatures, great companions on land or sea, always ready for a good belly scratch or a game of fetch.', response_metadata={'token_usage': {'completion_tokens': 38, 'prompt_tokens': 150, 'total_tokens': 188}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-324dc627-517f-4cf0-8345-3ef7349151ac-0', usage_metadata={'input_tokens': 150, 'output_tokens': 38, 'total_tokens': 188})]}}\n",
+      "{'agent': {'messages': [AIMessage(content='According to pirates, dogs are known for their loyalty and friendliness, making them great companions for pirates on long sea voyages.', response_metadata={'token_usage': {'completion_tokens': 27, 'prompt_tokens': 119, 'total_tokens': 146}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-5a30edc3-7be0-4743-b980-ca2f8cad9b8d-0', usage_metadata={'input_tokens': 119, 'output_tokens': 27, 'total_tokens': 146})]}}\n",
       "----\n"
      ]
     }
