Adds guide on passing additional params to a tool

--- a/docs/docs/how_to/index.mdx
+++ b/docs/docs/how_to/index.mdx
@@ -196,6 +196,7 @@ LangChain [Tools](/docs/concepts/#tools) contain a description of the tool (to p
 - [How to: handle errors when calling tools](/docs/how_to/tools_error)
 - [How to: disable parallel tool calling](/docs/how_to/tool_choice)
 - [How to: stream events from within a tool](/docs/how_to/tool_stream_events)
+- [How to: pass additional parameters to tools](/docs/how_to/tools_additional_params)
 
 ### Multimodal
 
