--- a/docs/docs/how_to/tools_additional_params.ipynb
+++ b/docs/docs/how_to/tools_additional_params.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "You probably don't want the model to determine our caching strategy by populating `use_cached_results` - instead you probably want to define it yourself based on something like recency.\n",
     "\n",
-    "Define a `curry` function that will accept a standard Python function, binding arguments to it:"
+    "To do this, define a `curry` function that accepts a standard Python function, binding arguments to it and converting it into a tool:"
    ]
   },
   {
