adding question to suffix

--- a/docs/docs/how_to/few_shot_examples.ipynb
+++ b/docs/docs/how_to/few_shot_examples.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "de69a214",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
       "So the final answer is: Joseph Ball\n",
       "\n",
       "\n",
-      "Person question is about: Mary Ball Washington\n"
+      "Asking about: Mary Ball Washington. Question: Who was the father of Mary Ball Washington?\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
     "prompt = FewShotPromptTemplate(\n",
     "    example_selector=example_selector,\n",
     "    example_prompt=example_prompt,\n",
-    "    suffix=\"Person question is about: {input}\",\n",
+    "    suffix=\"Asking about: {input}. Question: {question}\",\n",
     "    input_variables=[\"input\", \"question\"],\n",
     ")\n",
     "\n",
