--- a/docs/docs/how_to/custom_tools.ipynb
+++ b/docs/docs/how_to/custom_tools.ipynb
@@ -147,6 +147,7 @@
     "    \"\"\"Multiply a by the maximum of b.\"\"\"\n",
     "    return a * max(b)\n",
     "\n",
+    "\n",
     "multiply_by_max.args_schema.schema()"
    ]
   },
@@ -389,9 +390,8 @@
    ],
    "source": [
     "from langchain_core.language_models import GenericFakeChatModel\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [(\"human\", \"Hello. Please respond in the style of {answer_style}.\")]\n",
@@ -403,8 +403,7 @@
     "chain = prompt | llm | StrOutputParser()\n",
     "\n",
     "as_tool = chain.as_tool(\n",
-    "    name=\"Style responder\",\n",
-    "    description=\"Description of when to use tool.\"\n",
+    "    name=\"Style responder\", description=\"Description of when to use tool.\"\n",
     ")\n",
     "as_tool.args"
    ]
