--- a/docs/docs/integrations/vectorstores/azuresearch.ipynb
+++ b/docs/docs/integrations/vectorstores/azuresearch.ipynb
@@ -182,7 +182,7 @@
     "    index_name=index_name,\n",
     "    embedding_function=embeddings.embed_query,\n",
     "    # Configure max retries for the Azure client\n",
-    "    additional_search_client_options={ \"retry_total\": 4 }\n",
+    "    additional_search_client_options={\"retry_total\": 4},\n",
     ")"
    ]
   },
