--- a/docs/docs/how_to/custom_tools.ipynb
+++ b/docs/docs/how_to/custom_tools.ipynb
@@ -258,7 +258,7 @@
    "id": "f18a2503-5393-421b-99fa-4a01dd824d0e",
    "metadata": {},
    "source": [
-    ":::{.callout-warning}\n",
+    ":::{.callout-caution}\n",
     "By default, `@tool(parse_docstring=True)` will raise `ValueError` if the docstring does not parse correctly. See [API Reference](https://api.python.langchain.com/en/latest/tools/langchain_core.tools.tool.html) for detail and examples.\n",
     ":::"
    ]
