--- a/docs/docs/how_to/tool_stream_events.ipynb
+++ b/docs/docs/how_to/tool_stream_events.ipynb
@@ -164,8 +164,11 @@
    "source": [
     "from langchain_core.runnables import RunnableConfig\n",
     "\n",
+    "\n",
     "@tool\n",
-    "async def special_summarization_tool_with_config(long_text: str, config: RunnableConfig) -> str:\n",
+    "async def special_summarization_tool_with_config(\n",
+    "    long_text: str, config: RunnableConfig\n",
+    ") -> str:\n",
     "    \"\"\"A tool that summarizes input text using advanced techniques.\"\"\"\n",
     "    prompt = ChatPromptTemplate.from_template(\n",
     "        \"You are an expert writer. Summarize the following text in 10 words or less:\\n\\n{long_text}\"\n",
@@ -175,7 +178,7 @@
     "        return x[::-1]\n",
     "\n",
     "    chain = prompt | model | StrOutputParser() | reverse\n",
-    "    # Pass the \"config\" object as an argument to any executed runnables \n",
+    "    # Pass the \"config\" object as an argument to any executed runnables\n",
     "    summary = await chain.ainvoke({\"long_text\": long_text}, config=config)\n",
     "    return summary"
    ]
@@ -282,6 +285,7 @@
    "source": [
     "from langchain_core.runnables import ConfigurableField, RunnableConfig, RunnableLambda\n",
     "\n",
+    "\n",
     "@tool\n",
     "async def tool_with_configurable(long_text: str, config: RunnableConfig) -> str:\n",
     "    \"\"\"A tool that transforms input text using advanced techniques.\"\"\"\n",
@@ -294,15 +298,18 @@
     "        ConfigurableField(id=\"action\"),\n",
     "        default_key=\"summarize\",\n",
     "        # Just keep the output of the model the same if \"preserve\" is passed as a key\n",
-    "        haiku=haiku_prompt\n",
+    "        haiku=haiku_prompt,\n",
     "    )\n",
     "\n",
     "    chain = prompt | model | StrOutputParser()\n",
-    "    # Pass the \"config\" object as an argument to any executed runnables \n",
+    "    # Pass the \"config\" object as an argument to any executed runnables\n",
     "    summary = await chain.ainvoke({\"long_text\": long_text}, config=config)\n",
     "    return summary\n",
     "\n",
-    "await tool_with_configurable.ainvoke({\"long_text\": LONG_TEXT}, config={\"configurable\": {\"action\": \"haiku\"}})"
+    "\n",
+    "await tool_with_configurable.ainvoke(\n",
+    "    {\"long_text\": LONG_TEXT}, config={\"configurable\": {\"action\": \"haiku\"}}\n",
+    ")"
    ]
   },
   {
